namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eduai
  labels:
    name: eduai
